--- a/Client_CookBookApp/RecipesManagementWindow.xaml
+++ b/Client_CookBookApp/RecipesManagementWindow.xaml
@@ -26,8 +26,10 @@
             <TextBox x:Name="DescriptionTextBox" AcceptsReturn="True" Height="100" Margin="0,0,0,10"/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Сохранить" Click="SaveButton_Click" Margin="0,0,10,0" Padding="10,5" />
-                <Button Content="Отменить" Click="CancelButton_Click" Padding="10,5" />
+                <Button Content="Добавить" Click="AddButton_Click" Margin="0,0,10,0" Padding="10,5" />
+                <Button Content="Изменить
+                        " Click="EditButton_Click" Margin="0,0,5,0" Padding="5,5" Width="70" />
+                <Button Content="Удалить" Click="DeleteButton_Click" Padding="10,5" />
             </StackPanel>
         </StackPanel>
 
@@ -47,11 +49,6 @@
                     </DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                <Button Content="Добавить" Click="AddButton_Click" Margin="0,0,10,0" Padding="10,5" />
-                <Button Content="Редактировать" Click="EditButton_Click" Margin="0,0,10,0" Padding="10,5" />
-                <Button Content="Удалить" Click="DeleteButton_Click" Padding="10,5" />
-            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
